tests/rosetta/out/Haskell/anonymous-recursion.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/anonymous-recursion.hs:112:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/anonymous-recursion.hs:107:1
                 /workspace/mochi/tests/rosetta/out/Haskell/anonymous-recursion.hs:112:1
    |
112 | main = do
    | ^^^^
